--- a/02_BDS_BatDongSan_MultiLand/Views/Shared/_partial/_searchBox.cshtml
+++ b/02_BDS_BatDongSan_MultiLand/Views/Shared/_partial/_searchBox.cshtml
@@ -7,8 +7,8 @@
 }
 
     <div class="block left-module search">
-        <p class="title_block border-b tittle-b">Tìm kiếm</p>
-        <div class="block_content border-b featureLand">
+        <p class="title_block border-b tittle-b bw">Tìm kiếm</p>
+        <div class="block_content border-b featureLand bw">
                 <form action="/search" name="search" id="search" method="get">
                     <select class="input form-control" id="cat_s" name="parentCat">
                         <option value="0">Loại bất động sản</option>
