--- a/04_Shop_multiProduct/assets/css/style.css
+++ b/04_Shop_multiProduct/assets/css/style.css
@@ -958,7 +958,7 @@ span.notify-right{
  [ 3.4 Main menu]
  */
 .nav-top-menu{
-    background: #eee;
+    background: #3b59988f;
 }
 /*-----------------
  [ 3.4.1 Vertical megamenus]
@@ -5183,4 +5183,4 @@ span.notify-right{
 #navbar .navbar-nav{
         background-image: url(http://media.anpero.com/images/27/12018/22018012313045580.jpg);
 }
-.currency{font-weight:bold;}
+.currency{font-weight:bold}
