--- a/04_Shop_multiProduct/assets/css/option5.css
+++ b/04_Shop_multiProduct/assets/css/option5.css
@@ -128,7 +128,7 @@
 	margin-top: 0;
 }
 .option5 #footer,.option5 #footer a{
-    color:white;
+    color:#484141;
 }
 .option5 #footer a:hover{
     color: #a4e0ad;
@@ -170,7 +170,7 @@
 }
 
 .option5 .nav-top-menu.nav-ontop{
-	background: #39b54a;
+	background: #3b5998a3;
 	height: 51px;
 }
 .option5 #form-search-opntop .btn-search .fa{
@@ -183,7 +183,7 @@
 
 .option5 #main-menu .navbar{
 	border-radius: 0;
-	background: #39b54a;
+	/*background: #3b599882;*/
 }
 .option5 #main-menu .navbar-default .navbar-nav>li>a{
 	color: #fff;
@@ -195,7 +195,7 @@
 .option5 #main-menu .navbar .navbar-nav>li:hover, 
 .option5 #main-menu .navbar .navbar-nav>li.active{
 	background-image: none;
-	background: #2ba53c;
+	background: #4267b2;
 }
 .option5 #main-menu .navbar .navbar-nav>li:hover a, 
 .option5 #main-menu .navbar .navbar-nav>li.active a{
