--- a/05_Shop_MultiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/05_Shop_MultiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -123,6 +123,10 @@
                                                                     <p>@saleProduct[i].ShortDesc.Substring(0, 61)</p>
                                                                 </div>
                                                             }
+                                                            else
+                                                            {
+                                                                break;
+                                                            }
                                                         }
                                                     }
                                                 }
