--- a/05_Shop_MultiProduct/assets/stylesheet/style.css
+++ b/05_Shop_MultiProduct/assets/stylesheet/style.css
@@ -4008,7 +4008,7 @@ ul.pdt-list li.item a img.image-hover {
             font-size: 12px;
             overflow: hidden;
             letter-spacing: 0.5px;
-            
+            height: 65px;
         }
         .small-grid .item .item-inner .item-info .info-inner .item-title {
             min-height:64px;
@@ -5745,7 +5745,7 @@ text-transform: uppercase
     margin-top: 0px;
     margin-bottom: 0px;
     line-height: 19px;
-    min-height: 47px;
+    min-height: 50px;
 }
 
     .latest-blog h3 a {
@@ -14144,13 +14144,13 @@ select#shipping-address-select {
     padding: 25px;
     position: relative;
     margin-top: 0px;
-    padding-bottom: 45px;
+    /*padding-bottom: 45px;*/
     background-color: #fff;
-    border-width: 1px;
+    /*border-width: 1px;
     border-style: solid;
     border-color: #f5f5f5 #eee #d5d5d5 #eee;
     box-shadow: 0 5px 0 rgba(200,200,200,.2);
-    margin-top: 30px;
+    margin-top: 30px;*/
 }
 
 
