--- a/11_Company_Info/Views/Shared/_partial/_HomeSlide_2.cshtml
+++ b/11_Company_Info/Views/Shared/_partial/_HomeSlide_2.cshtml
@@ -37,7 +37,7 @@
     }
 </div>
 <div class="col-md-4 ">
-    <h1 class="border-b tittle-b bw">DỰ ÁN NỔI BẬT</h1>
+    <h1 class="border-b tittle-b bw">Bài viết nổi bật</h1>
     <div class="border-b bw">
         <div class="featureLand">
             <div class="scl2">
