--- a/11_Company_Info/Views/Shared/_Layout.cshtml
+++ b/11_Company_Info/Views/Shared/_Layout.cshtml
@@ -49,18 +49,17 @@
               
                 }
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 group-button-header">
-                    <a title="Compare" href="#" class="">Tiếng Việt | </a>
-                    <a title="Compare" href="#" class="">English | </a>
-                    <a title="Compare" href="#" class="">中国 | </a>
-                    <div class="dropdown open flr">
+                    <a title="Compare" href="javascript:doGTranslate('vi|vi');" class="notranslate">Tiếng Việt | </a>
+                    <a title="Compare" href="javascript:doGTranslate('vi|en');" class="notranslate">English | </a>
+                    <a title="Compare" href="javascript:doGTranslate('vi|zh-CN');" class="notranslate">中国 | </a>
+                    <div class="dropdown open flr notranslate" style="padding-left:5px;">
                         <a class="current-open" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" href="#">
                           Ngôn ngữ khác
                         </a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">English</a></li>
-                            <li><a href="#">French</a></li>
-                            <li><a href="#">French</a></li>
-                            <li><a href="#">French</a></li>
+                            <li><a href="javascript:doGTranslate('vi|ko');">Korean</a></li>
+                            <li><a href="javascript:doGTranslate('vi|ru');">Russian</a></li>
+                            <li><a href="javascript:doGTranslate('vi|ja');">Japanese</a></li>                            
                         </ul>
                     </div>
                 </div>
@@ -173,6 +172,7 @@
                                 <a href="http://www.twitter.com/share?url=@thisUrl" target="_blank"><i class="fa fa-twitter"></i></a>
                             }
                         </div>
+                        <div id="google_translate_element2"></div>
 
                     </div>
                 </div>
@@ -260,5 +260,13 @@
         }
 
     }
+    <script type="text/javascript">
+        function GTranslateGetCurrentLang() {var keyValue = document.cookie.match('(^|;) ?googtrans=([^;]*)(;|$)');return keyValue ? keyValue[2].split('/')[2] : null;}
+        function GTranslateFireEvent(element,event){try{if(document.createEventObject){var evt=document.createEventObject();element.fireEvent('on'+event,evt)}else{var evt=document.createEvent('HTMLEvents');evt.initEvent(event,true,true);element.dispatchEvent(evt)}}catch(e){}}
+        function doGTranslate(lang_pair){if(lang_pair.value)lang_pair=lang_pair.value;if(lang_pair=='')return;var lang=lang_pair.split('|')[1];if(GTranslateGetCurrentLang() == null && lang == lang_pair.split('|')[0])return;var teCombo;var sel=document.getElementsByTagName('select');for(var i=0;i<sel.length;i++)if(sel[i].className=='goog-te-combo')teCombo=sel[i];if(document.getElementById('google_translate_element2')==null||document.getElementById('google_translate_element2').innerHTML.length==0||teCombo.length==0||teCombo.innerHTML.length==0){setTimeout(function(){doGTranslate(lang_pair)},500)}else{teCombo.value=lang;GTranslateFireEvent(teCombo,'change');GTranslateFireEvent(teCombo,'change')}}
+    </script>
+    
+    <script type="text/javascript">function googleTranslateElementInit2() {new google.translate.TranslateElement({pageLanguage: 'vi', autoDisplay: false}, 'google_translate_element2');}</script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
 </body>
 </html>
