--- a/04_Shop_multiProduct/assets/css/style.css
+++ b/04_Shop_multiProduct/assets/css/style.css
@@ -5184,3 +5184,6 @@ span.notify-right{
         background-image: url(http://media.anpero.com/images/27/12018/22018012313045580.jpg);
 }
 .currency{font-weight:bold}
+.right-block h6{font-weight:bold;color:#2f4d84;}
+.right-block .jtp{font-size:12px;color:#209c8b;border-bottom:1px solid #209c8b;}
+.cm-ct{color:#209c8b;font-style:italic;}
