--- a/04_Shop_multiProduct/Views/Shared/product/_MenuAndAdsPartial.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/product/_MenuAndAdsPartial.cshtml
@@ -116,7 +116,7 @@
         </div>
                     }
     <div class="block left-module">
-        <p class="title_block">Nhận xét của khách hàng</p>
+        <p class="title_block">KHÁCH HÀNG NÓI VỀ CHÚNG TÔI</p>
         <div class="block_content">
             <div>
                 <ul class="owl-carousel" data-loop="true" data-nav="false" data-margin="0" data-autoplayTimeout="1000" data-autoplay="true" data-autoplayHoverPause="true" data-items="1">
