--- a/11_Company_Info/assets/css/option5.css
+++ b/11_Company_Info/assets/css/option5.css
@@ -128,10 +128,10 @@
 	margin-top: 0;
 }
 .option5 #footer,.option5 #footer a{
-    color:#837f94;
+    color:white;
 }
 .option5 #footer a:hover{
-    color: #161617;
+    color: white;
 }
 .option5 a:hover{
 	color: #161617;
