--- a/02_BDS_BatDongSan_MultiLand/Views/Article/Category.cshtml
+++ b/02_BDS_BatDongSan_MultiLand/Views/Article/Category.cshtml
@@ -5,23 +5,16 @@
   
 <div class="columns-container">
     <div class="container" id="columns">
-        <!-- breadcrumb -->
         <div class="breadcrumb clearfix">
             <a class="home" href="#" title="Return to Home">Home</a>
             <span class="navigation-pipe">&nbsp;</span>
             <span class="navigation_page">Blog</span>
         </div>
-        <!-- ./breadcrumb -->
-        <!-- row -->
         <div class="row">
-
-            <!-- Left colunm -->
             @Html.Partial("article/_MenuAndAdsPartial")
-            <!-- ./left colunm -->
-            <!-- Center colunm-->
             @if (articleList.ResultsCount > 0)
             {
-                <div class="center_column col-xs-12 col-sm-9" id="center_column">
+                <div class="center_column col-xs-12 col-sm-9 bw" id="center_column">
                     <h2 class="page-heading">
                         <span class="page-heading-title2">@ViewBag.CategoryName</span>
                     </h2>
@@ -90,7 +83,7 @@
             }
             else
             {
-                <div class="center_column col-xs-12 col-sm-9" id="center_column">
+                <div class="center_column col-xs-12 col-sm-9 bw" id="center_column">
                     <h2 class="page-heading">
                         <span class="page-heading-title2">Blog post</span>
                     </h2>
@@ -184,10 +177,9 @@
                     </div>
                 </div>
             }
-      
-            <!-- ./ Center colunm -->
+
         </div>
-        <!-- ./row-->
+
     </div>
 </div>
 
