--- a/02_BDS_BatDongSan_MultiLand/Views/Article/Index.cshtml
+++ b/02_BDS_BatDongSan_MultiLand/Views/Article/Index.cshtml
@@ -16,16 +16,11 @@
             <span class="navigation-pipe">&nbsp;</span>
             <span><a href="@Anpero.StringHelpper.GetBlogCategoryLink(item.CategoryName, item.CategoryId)" title="@item.CategoryName">@item.CategoryName</a> </span>
         </div>
-        <!-- ./breadcrumb -->
-        <!-- row -->
         <div class="row">
-            <!-- Left colunm -->
             @Html.Partial("article/_MenuAndAdsPartial")
-            <!-- ./left colunm -->
-            <!-- Center colunm-->
-            <div class="center_column col-xs-12 col-sm-9" id="center_column">
+            <div class="center_column col-xs-12 col-sm-9 bw" id="center_column">
                 <h1 class="page-heading">
-                    <span class="page-heading-title2">@item.Title</span>
+                    <span class="page-heading-title2">@item.Title </span>
                 </h1>
                 <article class="entry-detail">
                     <div class="entry-meta-data">
@@ -46,7 +41,6 @@
                         @item.Tag
                     </div>
                 </article>
-                <!-- Related Posts -->
                 @if (ViewData["ArticleList"] != null)
                 {
                     SearchArticleResults articleList = (SearchArticleResults)ViewData["ArticleList"];
@@ -86,13 +80,8 @@
                     }
 
                 }
-
-                <!-- ./Related Posts -->
-         
             </div>
-            <!-- ./ Center colunm -->
         </div>
-        <!-- ./row-->
     </div>
 </div>
     
