--- a/04_Shop_multiProduct/assets/css/style.css
+++ b/04_Shop_multiProduct/assets/css/style.css
@@ -2799,8 +2799,9 @@ span.notify-right{
   text-transform: uppercase;
   padding-top: 11px;
   padding-bottom: 12px;
-  background-color: rgba(43, 23, 13, 0.8);
+  /*background-color: rgba(43, 23, 13, 0.8);*/
   color: white;
+  background-image: url(http://media.anpero.com/images/27/12018/22018012313045580.jpg);
 }
 #left_column .block .block_content{
   padding:  15px 20px;
@@ -5182,6 +5183,7 @@ span.notify-right{
 }
 #navbar .navbar-nav{
         background-image: url(http://media.anpero.com/images/27/12018/22018012313045580.jpg);
+        width:100%;
 }
 .currency{font-weight:bold}
 .right-block h6{font-weight:bold;color:#2f4d84;}
