--- a/11_Company_Info/Views/Product/Index.cshtml
+++ b/11_Company_Info/Views/Product/Index.cshtml
@@ -4,18 +4,16 @@
 @if (ViewData["prDetail"] != null)
 {
     AnperoFrontend.WebService.ProductItem item = (AnperoFrontend.WebService.ProductItem)ViewData["prDetail"];
-    <div class="page-top">
-        <div class="container">
-            <!-- breadcrumb -->
-            <div class="breadcrumb clearfix">
+    <div class="page-top ">
+        <div class="container ">
+            <div class="breadcrumb clearfix ">
                 <a class="home" href="/" title="Return to Home">Home</a>
                 <span class="navigation-pipe">&nbsp;</span>
-                <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.ParentCatName,item.pa)" title="Return to Home">@item.ParentCatName</a>
+                <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.ParentCatName,item.ParentId)" title="Return to Home">@item.ParentCatName</a>
                 <span class="navigation-pipe">&nbsp;</span>
                 <a href="@Anpero.StringHelpper.GetCategoryLink(item.CatName,item.CatID)" title="Return to Home">@item.CatName</a>
             </div>
-            <!-- ./breadcrumb -->            
-            <div class="row bw">              
+            <div class="row ">              
                 @if (Request.Browser.IsMobileDevice)
                 {
                 
