--- a/11_Company_Info/Views/Shared/product/_productDetail.cshtml
+++ b/11_Company_Info/Views/Shared/product/_productDetail.cshtml
@@ -1,36 +1,12 @@
 ﻿@if (ViewData["prDetail"] != null)
 {
     AnperoFrontend.WebService.ProductItem item = (AnperoFrontend.WebService.ProductItem)ViewData["prDetail"];
-<div class="center_column col-xs-12 col-sm-9" id="center_column">
+<div class="center_column col-xs-12 col-sm-9 bw" id="center_column">
     <!-- Product -->
     <div id="product">
-        <div class="primary-box row">
-            <div class="pb-left-column col-xs-12 col-sm-6">
-                <!-- product-imge-->
-                <div class="product-image">
-                    <div class="product-full">
-                        <img id="product-zoom" src='@item.Images' data-zoom-image="@item.Images" />
-                    </div>
-                    <div class="product-img-thumb" id="gallery_01">
-                        @if (item.ImagesSlide != null && item.ImagesSlide.Length > 0)
-                        {
-                            <ul class="owl-carousel" data-items="3" data-nav="true" data-dots="false" data-margin="20" data-loop="true">
-                                @foreach (var images in item.ImagesSlide)
-                                {
-                                    <li>
-                                        <a href="#" data-image="@images" data-zoom-image="@images">
-                                            <img id="product-zoom" src="@images" />
-                                        </a>
-                                    </li>
-                                }
-                            </ul>
-                        }
-
-                    </div>
-                </div>
-                <!-- product-imge-->
-            </div>
-            <div class="pb-right-column col-xs-12 col-sm-6">
+b        <div class="primary-box row ">
+           
+            <div class="pb-right-column col-xs-12 col-sm-12">
                 <h1 class="product-name">@item.PrName</h1>
                 <div class="product-comments">
                     <div class="product-star">
@@ -40,31 +16,6 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-half-o"></i>
                     </div>
-
-                </div>
-                <div class="product-price-group">
-                    @if (item.Price>0)
-                    {
-                        <span class="price">@Anpero.StringHelpper.ConvertToVndMoney(item.Price) đ</span>
-                    }
-                </div>
-                <div class="info-orther">
-                    <p>
-                        Trạng thái:
-                        @if (item.IsInstock)
-                        {
-                            <span class="in-stock">Vẫn còn</span>
-                        }
-                        else
-                        {
-                            <span class="in-stock">Đã bán</span>
-                        }
-                    </p>
-                    
-                    @if (item.Warranty > 0)
-                    {
-                        <p>Diện tích: @item.Warranty m2</p>
-                    }
                 </div>
                 @if (item.ShortDesc != null && item.ShortDesc.Length > 0)
                 {
@@ -72,18 +23,7 @@
                         @Html.Raw(item.ShortDesc)
                     </div>
                 }
-                <div class="form-action">
-                    <div class="button-group">
-                        @if (item.IsInstock)
-                        {
-                            <a  href="javascript:Cart.addProduct(@item.Id,'@Convert.ToInt32(item.Price)','@item.Images','@item.PrName')"><img src="~/assets/images/dangky.gif" title="tư vấn bất động sản"/> </a>
-
-                        }
-                        else
-                        {
-                            <a class="btn-add-cart" href="javascript:void(0);">Tạm đóng</a>
-                        }
-                    </div>
+                <div class="form-action">                  
 
                     <div class="button-group">
                         <a target="_blank" class="wishlist" href="//www.facebook.com/sharer.php?u=@HttpContext.Current.Request.RawUrl">
@@ -99,28 +39,14 @@
                 </div>
             </div>
         </div>
-        <!-- tab product -->
         @if (!string.IsNullOrEmpty(item.Detail))
         {
-            <div class="product-tab">
-                <ul class="nav-tab">
-                    <li class="active">
-                        <a aria-expanded="false" data-toggle="tab" href="#product-detail">Thông tin chi tiết</a>
-                    </li>
-                </ul>
-                <div class="tab-container">
-                    <div id="product-detail" class="tab-panel active">
-                        @Html.Raw(item.Detail)
-                    </div>
-                </div>
-            </div>
+             @Html.Raw(item.Detail)
         }
-
-        <!-- ./tab product -->
-        <!-- box product -->
         <div class="page-product-box">
-            <h3 class="heading">Bất động sản liên quan</h3>
-            <ul class="product-list">
+            <h3 class="heading">Tin liên quan</h3>
+            <ul class="related-posts owl-carousel" data-dots="false" data-loop="true" data-nav="true" data-margin="30" data-autoplayTimeout="1000" data-autoplayHoverPause="true" data-responsive='{"0":{"items":1},"600":{"items":2},"1000":{"items":3}}'>
+
                 @if (ViewData["relateProduct"] != null)
                 {
                     AnperoFrontend.WebService.SearchResult relateProduct = (AnperoFrontend.WebService.SearchResult)ViewData["relateProduct"];
@@ -128,48 +54,21 @@
                     {
                         foreach (var items in relateProduct.Item)
                         {
-                            <li class="col-sx-12 col-sm-3">
-                                <div class="product-container">
-                                    <div class="left-block">
+                            <li class="post-item">
+                                <article class="entry">
+                                    <div class="entry-thumb image-hover2">
                                         <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, @item.Id)">
                                             <img class="img-responsive" alt="@item.PrName" src="@items.Images" />
-                                            @if (item.IsSale)
-                                            {
-                                                <div class="price-percent-reduction2">giảm @Anpero.StringHelpper.ConVertToMoneyFormatInt((item.Price - item.SalePrice).ToString())</div>
-                                            }
                                         </a>
-                                        <div class="quick-view">
-                                            <a title="Add to my wishlist" class="heart" href="#"></a>
-                                            <a title="Add to compare" class="compare" href="#"></a>
-                                            <a title="Quick view" class="search" href="#"></a>
-                                        </div>
-                                        <div class="add-to-cart">
-                                            <a title="Add to Cart" href="#add">Đặt mua</a>
-                                        </div>
                                     </div>
-                                    <div class="right-block">
-                                        <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName, @item.Id)">@item.PrName</a></h5>
-                                        <div class="product-star">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star-half-o"></i>
-                                        </div>
-                                        <div class="content_price">
-                                            @if (item.IsSale)
-                                            {
-                                                <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString())</span>
-                                                                <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString())</span>
-                                            }
-                                            else
-                                            {
-                                                <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString())</span>
-                                            }
+                                    <div class="entry-ci">
+                                        <h3 class="entry-title"><a href="#">Sed ut perspiciatis unde omnis iste natus error</a></h3>
 
+                                        <div class="entry-more">
+                                            <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, @item.Id)">Xem thêm</a>
                                         </div>
                                     </div>
-                                </div>
+                                </article>
                             </li>
                         }
                     }
@@ -177,9 +76,6 @@
 
             </ul>
         </div>
-        <!-- ./box product -->
-
     </div>
-    <!-- Product -->
 </div>
 }
