--- a/11_Company_Info/assets/css/style.css
+++ b/11_Company_Info/assets/css/style.css
@@ -2877,7 +2877,10 @@ span.notify-right {
 [14. footer]
 */
 #footer {
-    background:#cfcfd0!important;
+    
+    background: #7c7062!important;
+    height: 368px;
+    border-bottom: 3px solid #e37f29;
 }
 
 /** add-box **/
@@ -3041,12 +3044,11 @@ span.notify-right {
 /** #footer-menu-box **/
 
 #footer-menu-box {
-    border-top: 1px solid #E1E1E1;
-    margin-top: 10px;
+    background: #231f20;    
     padding-top: 20px;
     margin-bottom: 20px;
 }
-
+#footer-menu-box,#footer-menu-box a{color:white;}
 .footer-menu-list {
     list-style: none;
     text-align: center;
@@ -6069,17 +6071,19 @@ span.notify-right {
     height: 56px;
 }
 .header {
-    background: #1c7fbe;
+    /*background: #1c7fbe;
     background-image: -moz-linear-gradient(left, #43a6e1 3.2%, #0063a5 57.52%, #0063a5 58.2%);
     background-image: -o-linear-gradient(left, #43a6e1 3.2%, #0063a5 57.52%, #0063a5 58.2%);
     background-image: -webkit-linear-gradient(left, #43a6e1 3.2%, #0063a5 57.52%, #0063a5 58.2%);
-    background-image: linear-gradient(left, #43a6e1 3.2%, #0063a5 57.52%, #0063a5 58.2%);
+    background-image: linear-gradient(left, #43a6e1 3.2%, #0063a5 57.52%, #0063a5 58.2%);*/
+    background-color:white;
+    color:black;
 }
 .group-button-header {
     text-align: right;
 }
     .group-button-header a, .group-button-header.dropdown a {
-        color: white;
+        color: #b4b7b6;
     }
     .group-button-header.dropdown {
            margin-left:5px;
@@ -6089,3 +6093,8 @@ span.notify-right {
     }
 .navbar-nav > li > a{line-height:24px!important;}
 .input-serach input{color:white;}
+.logo img{max-height:60px;}
+#google_translate_element2{display:none;}
+.pct .product-name{
+        margin-top: 11px;
+}
