--- a/11_Company_Info/assets/css/style.css
+++ b/11_Company_Info/assets/css/style.css
@@ -12,6 +12,9 @@ body {
     background-attachment: fixed;*/
         background-color: #e9ebee;
 }
+body {
+    top: 0px !important; 
+    }
 
     body.is-ontop {
         margin-top: 53px;
@@ -6094,7 +6097,8 @@ span.notify-right {
 .navbar-nav > li > a{line-height:24px!important;}
 .input-serach input{color:white;}
 .logo img{max-height:60px;}
-#google_translate_element2{display:none;}
+#google_translate_element2,.goog-te-banner-frame,.skiptranslate{display:none;}
+
 .pct .product-name{
         margin-top: 11px;
 }
