--- a/11_Company_Info/Views/Shared/product/_productDetail.cshtml
+++ b/11_Company_Info/Views/Shared/product/_productDetail.cshtml
@@ -4,8 +4,7 @@
 <div class="center_column col-xs-12 col-sm-9 bw" id="center_column">
     <!-- Product -->
     <div id="product">
-b        <div class="primary-box row ">
-           
+        <div class="primary-box row ">
             <div class="pb-right-column col-xs-12 col-sm-12">
                 <h1 class="product-name">@item.PrName</h1>
                 <div class="product-comments">
