--- a/02_BDS_BatDongSan_MultiLand/assets/css/style.css
+++ b/02_BDS_BatDongSan_MultiLand/assets/css/style.css
@@ -10,7 +10,11 @@ body {
     /*background: url(http://media.anpero.com/images/27/12018/cloud-bg2018012314024680.jpg) center center no-repeat;
         background-size: cover;
     background-attachment: fixed;*/
-        background-color: #e9ebee;
+    background-color: #e9ebee;
+}
+
+body {
+    top: 0px !important;
 }
 
     body.is-ontop {
@@ -844,15 +848,12 @@ img.alignright {
     padding-left: 15px;
 }
 
-.main-header .header-search-box .form-inline .input-serach {
-    width: calc(100% - 200px);
-}
 
-    .main-header .header-search-box .form-inline .input-serach input {
-        border: none;
-        padding-left: 15px;
-        width: 100%;
-    }
+.main-header .header-search-box .form-inline .input-serach input {
+    border: none;
+    padding-left: 15px;
+    width: 100%;
+}
 
 .main-header .header-search-box .form-inline .btn-search {
     width: 41px;
@@ -2880,7 +2881,9 @@ span.notify-right {
 [14. footer]
 */
 #footer {
-    background:#cfcfd0!important;
+    background: #7c7062 !important;
+    height: 368px;
+    border-bottom: 3px solid #e37f29;
 }
 
 /** add-box **/
@@ -3044,11 +3047,14 @@ span.notify-right {
 /** #footer-menu-box **/
 
 #footer-menu-box {
-    border-top: 1px solid #E1E1E1;
-    margin-top: 10px;
+    background: #231f20;
     padding-top: 20px;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
 }
+
+    #footer-menu-box, #footer-menu-box a {
+        color: white;
+    }
 
 .footer-menu-list {
     list-style: none;
@@ -5949,15 +5955,17 @@ span.notify-right {
     color: #3b5998;
     font-weight: bold;
 }
-.faticle{
-    height:169px;
-    overflow:hidden;
+
+.faticle {
+    height: 169px;
+    overflow: hidden;
 }
-.faticle .post-title a {
-    color: #337ab7;
-    font-weight: bold;
-    font-size: 16px;
-}
+
+    .faticle .post-title a {
+        color: #337ab7;
+        font-weight: bold;
+        font-size: 16px;
+    }
 
 .home-article .post-desc {
     margin-bottom: 3px;
@@ -6015,7 +6023,7 @@ span.notify-right {
     padding: 15px !important;
 }
 
-    .artCt2 h4 a  {
+    .artCt2 h4 a {
         color: #337ab7;
         font-size: 12px;
         font-weight: bold;
@@ -6051,7 +6059,7 @@ span.notify-right {
 }
 
 .scl2 .left-block img {
-    max-height: 100px;
+    max-height: 140px;
 }
 
 @media (max-width: 480px) {
@@ -6061,8 +6069,15 @@ span.notify-right {
         margin-right: auto;
     }
 }
-.bw{background-color:white;}
-._l10{padding-left:-10px;}
+
+.bw {
+    background-color: white;
+}
+
+._l10 {
+    padding-left: -10px;
+}
+
 #home_link {
     background-image: url(/assets/images/home.png);
     background-position: 50%;
@@ -6071,6 +6086,53 @@ span.notify-right {
     padding: 0px;
     height: 56px;
 }
-.pct .product-name{
-        margin-top: 11px;
+
+.header {
+    /*background: #1c7fbe;
+    background-image: -moz-linear-gradient(left, #43a6e1 3.2%, #0063a5 57.52%, #0063a5 58.2%);
+    background-image: -o-linear-gradient(left, #43a6e1 3.2%, #0063a5 57.52%, #0063a5 58.2%);
+    background-image: -webkit-linear-gradient(left, #43a6e1 3.2%, #0063a5 57.52%, #0063a5 58.2%);
+    background-image: linear-gradient(left, #43a6e1 3.2%, #0063a5 57.52%, #0063a5 58.2%);*/
+    background-color: white;
+    color: black;
+}
+
+.group-button-header {
+    text-align: right;
+}
+
+    .group-button-header a, .group-button-header.dropdown a {
+        color: #b4b7b6;
+    }
+
+    .group-button-header.dropdown {
+        margin-left: 5px;
+    }
+
+.flr {
+    float: right;
+}
+
+.navbar-nav > li > a {
+    line-height: 24px !important;
+}
+
+.input-serach input {
+    color: white;
+}
+
+.logo img {
+    max-height: 60px;
+}
+
+#google_translate_element2, .goog-te-banner-frame, .skiptranslate {
+    display: none;
+}
+
+.pct .product-name {
+    margin-top: 11px;
+}
+
+.input-serach input {
+    color: black;
 }
