--- a/11_Company_Info/Views/Shared/_Layout.cshtml
+++ b/11_Company_Info/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                 @if (!Request.Browser.IsMobileDevice)
                 { 
                     <div class="col-sm-8 col-md-3 header-search-box">
-                            <form class="form-inline" action="/search" id="search" method="get">
+                            <form class="form-inline" action="/search" id="search" method="post">
                                 <div class="form-group input-serach">
                                     <input type="text" placeholder="Gõ vài từ để tìm..." >
                                 </div>
