--- a/11_Company_Info/Views/Shared/_Layout.cshtml
+++ b/11_Company_Info/Views/Shared/_Layout.cshtml
@@ -50,13 +50,13 @@
                 }
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 group-button-header  pull-right">
                     <a title="Compare" href="javascript:doGTranslate('vi|vi');" class="notranslate">Tiếng Việt | </a>
-                    <a title="Compare" href="javascript:doGTranslate('vi|en');" class="notranslate">English | </a>
-                    <a title="Compare" href="javascript:doGTranslate('vi|zh-CN');" class="notranslate">中国 | </a>
+                    <a title="Compare" href="javascript:doGTranslate('vi|en');" class="notranslate">English | </a>                    
                     <div class="dropdown open flr notranslate" style="padding-left:5px;">
                         <a class="current-open" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" href="#">
                           Ngôn ngữ khác
                         </a>
                         <ul class="dropdown-menu" role="menu">
+                            <li><a href="javascript:doGTranslate('vi|zh-CN');">中国</a></li>
                             <li><a href="javascript:doGTranslate('vi|ko');">Korean</a></li>
                             <li><a href="javascript:doGTranslate('vi|ru');">Russian</a></li>
                             <li><a href="javascript:doGTranslate('vi|ja');">Japanese</a></li>                            
