--- a/11_Company_Info/Views/Shared/_Layout.cshtml
+++ b/11_Company_Info/Views/Shared/_Layout.cshtml
@@ -136,7 +136,7 @@
                         <a href="/"><img src="@commonInfo.Logo" alt="logo"></a>
                         <div id="address-list">
                             <div class="tit-name">Địa chỉ:</div>
-                            <div class="tit-contain">@commonInfo.Address</div>
+                            <div class="tit-contain">@Html.Raw(commonInfo.Address)</div>
                             <div class="tit-name">Phone:</div>
                             <div class="tit-contain">@commonInfo.HotLine</div>
 
