--- a/11_Company_Info/Views/Shared/product/_productDetail.cshtml
+++ b/11_Company_Info/Views/Shared/product/_productDetail.cshtml
@@ -61,7 +61,7 @@
                                         </a>
                                     </div>
                                     <div class="entry-ci">
-                                        <h3 class="entry-title"><a href="#">Sed ut perspiciatis unde omnis iste natus error</a></h3>
+                                        <h3 class="entry-title"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName, @item.Id)">@item.PrName</a></h3>
 
                                         <div class="entry-more">
                                             <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, @item.Id)">Xem thêm</a>
